@@ -2,14 +2,14 @@
 Hash: SHA1
 
 DIST thunar-volman-0.3.80.tar.bz2 353504 RMD160 9291f1fd3cf05ef9647308f5d463ea8eecbbd6b3 SHA1 c4bfbcde72baf2d4520dfa4db0de43616de7a0b8 SHA256 e400682afb0f5fcca231fe8793b31769f3645a9b5b0604d251e05b17d48217ee
-EBUILD thunar-volman-0.3.80.ebuild 507 RMD160 fd03fa9bde0165ce7b79e2eb4d1ebd6758950b32 SHA1 589cad61a514c4bae7fa8e8897c4916be06f973c SHA256 e90fe11c8d6eb5717b3786d1bde5f92b510bab6233d2a882f6c9273312730c7e
-EBUILD thunar-volman-9999.ebuild 507 RMD160 a32e9b0d692571936a548b71031f3fe05b81eec9 SHA1 7ad0a9f888c33fe2fde398e81ca8ab315ae0d0fa SHA256 75fd12dd18d5f7bc5d966aeaf28968c428337258bb7cef34ec7218e1b2804467
-MISC ChangeLog 644 RMD160 7e15589efbd9cc06e09b35a340d1385f9c8024d2 SHA1 7ab2d90f2e513346292f8e364496cbaa486c04a2 SHA256 7eda9e1d829300f2f74e5628e4bdf463eea6b893f231f848b949f58518fbef86
+EBUILD thunar-volman-0.3.80.ebuild 499 RMD160 04c3e0aa3147e2953c1ef77475f08213220beb06 SHA1 809749e8032db38cc2f162a6b0cc05d8b2c664a0 SHA256 159dac133127d887f0dd1811296f0d2928788c8dc3a13a3137325b14e2c6512c
+EBUILD thunar-volman-9999.ebuild 499 RMD160 04c3e0aa3147e2953c1ef77475f08213220beb06 SHA1 809749e8032db38cc2f162a6b0cc05d8b2c664a0 SHA256 159dac133127d887f0dd1811296f0d2928788c8dc3a13a3137325b14e2c6512c
+MISC ChangeLog 901 RMD160 2ba2e197a8f36cef541329101999c5ff8973350d SHA1 bc00efe2f3b804bd2e68c8b28a1a82fe9ff4b89e SHA256 153b1d3e1bda9b24944803ca3a7384796bbfa1e5f1c313987cd05bea124f17e3
 MISC metadata.xml 157 RMD160 d7470fe88d1b96f3a7f1ef26fb7dc646b4a1b907 SHA1 7eae91f2588bdae8667d37a98fb3090d539eeca1 SHA256 44350daa7594842894d676413708d8ea77ccb0017bed24711af5b256281f5e61
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.9 (GNU/Linux)
 
-iEYEARECAAYFAkkXcDwACgkQKhnDs22gwa+++wCgx9rSONvozOxAn3xsE/GOzd6c
-dDYAmwTqCfFxKkFexYJYy1w0CEF7E9bd
-=uAyu
+iEYEARECAAYFAklAF6cACgkQKhnDs22gwa/qygCgj/P/CgTt+SITfqSFNSxx2ApU
+3kUAoN3A8qUDG2VZMrsGrNng6saMXt5O
+=whAK
 -----END PGP SIGNATURE-----
